--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,33 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your entire site, values
+# which you are expected to set up once and rarely need to edit after that.
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
 
+# Site settings
+title: Eswar Reddy Prasad
+description: > # This means to ignore newlines until "baseurl:"
+  Business Analyst Portfolio
+baseurl: "/eswar-reddy-portfolio" # the subpath of your site, e.g. /blog
+url: "https://eswarreddy.github.io" # the base hostname & protocol for your site
+twitter_username: your-twitter-handle
+github_username:  eswarreddy
+
+# Build settings
+markdown: kramdown
+theme: jekyll-theme-minimal
+plugins:
+  - jekyll-feed
+
+# Exclude from processing.
+# The following items will not be processed, by default. Create a custom list
+# to override the default setting.
+# exclude:
+#   - Gemfile
+#   - Gemfile.lock
+#   - node_modules
+#   - vendor/bundle/
+#   - vendor/cache/
+#   - vendor/gems/
+#   - vendor/ruby/
