--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ github_username:  eswarreddy
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-minimal
+theme: jekyll-theme-cayman
 plugins:
   - jekyll-feed
 
